Begining of the website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P-Number</title>
+  <title>P2662151</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-  
+  <title>UPTODATE Technology Review</title>
+  <div id="menuToggler">
+    &#8801;
+  </div>
+  <nav id="menu">
+    <a href="#">Homepage</a>
+    <a href="#">Comparisons</a>
+    <a href="#">Buying Guides</a>
+    <a href="#">Abount</a>
+  </nav>
+
   <h1>Hello World</h1>
 
   <script src="js/scripts.js"></script>
 </body>
+
 </html>
