--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-  <title>UPTODATE Technology Review</title>
   <div id="menuToggler">
     &#8801;
   </div>
+
   <nav id="menu">
     <a href="#">Homepage</a>
     <a href="#">Comparisons</a>
     <a href="#">Buying Guides</a>
-    <a href="#">Abount</a>
+    <a href="#">About</a>
   </nav>
 
-  <h1>Hello World</h1>
+  <section id="title">
+    <h1>UPTODATE Technology Review</h1>
+  </section>
+
 
   <script src="js/scripts.js"></script>
 </body>
