--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </div>
 
   <nav id="menu">
-    <a href="#">Homepage</a>
-    <a href="#">Comparisons</a>
-    <a href="#">Buying Guides</a>
-    <a href="#">About</a>
+    <a href="#">Computing</a>
+    <a href="#">Mobile</a>
+    <a href="#">Entertaiment</a>
+    <a href="#">About Us</a>
   </nav>
 
   <section id="title">
