--- a/index.html
+++ b/index.html
@@ -9,21 +9,38 @@
 </head>
 
 <body>
-  <div id="menuToggler">
-    &#8801;
-  </div>
+  <header>
+    <div id="menuToggler">
+      &#8801;
+    </div>
 
-  <nav id="menu">
-    <a href="#">Computing</a>
-    <a href="#">Mobile</a>
-    <a href="#">Entertaiment</a>
-    <a href="#">About Us</a>
-  </nav>
+    <nav id="menu">
+      <a href="#">Computing</a>
+      <a href="#">Mobile</a>
+      <a href="#">Entertaiment</a>
+      <a href="#">About Us</a>
+    </nav>
+  </header>
+  <main>
+    <section id="title">
+      <h1>New Technology Trending</h1>
+    </section>
+    <section id="videoCard">
+      <h1>Best gaming graphics cards for 2024</h1>
+      <p>One of the best graphics cards that you can have in your computer
+        in 2024 is the GeForce RTX 4070 super.
+      </p>
 
-  <section id="title">
-    <h1>UPTODATE Technology Review</h1>
-  </section>
+      <p>Specifications</p>
+      <p>GPU: AD104</p>
+      <p>GPU Cores: 7168</p>
+      <p>Boost Clock: 2,475 MHz</p>
+      <p>Video RAM: 12GB GDDR6X 21 Gbps</p>
+      <p>TGP: 200 watts</p>
+      <p>TGP: 200 watts</p>
+    </section>
 
+  </main>
 
   <script src="js/scripts.js"></script>
 </body>
