old menu bar deleted, new one made, only for desktop

--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
 
 <body>
   <header>
-    <section id="title">
-      <div id="menuToggler">
-        &#8801;
-      </div>
+    <h2 id="siteName">New Technology Trending</h1>
 
-      <nav id="menu">
+      <nav id="navbar">
         <a href="#">Computing</a>
         <a href="#">Mobile</a>
         <a href="#">Entertaiment</a>
         <a href="#">About Us</a>
       </nav>
-
-
-      <h1>New Technology Trending</h1>
-    </section>
   </header>
   <main>
     <section id="videoCard">
