Menu bar few changes+ about us different

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 
 <body>
   <header>
-    <h2 id="siteName">New Technology Trending</h1>
+    <section id="siteName">
+      <h2>New Technology </h2>
+      <h2>Trending</h2>
+    </section>
 
-      <nav id="navbar">
-        <a href="#">Computing</a>
-        <a href="#">Mobile</a>
-        <a href="#">Entertaiment</a>
-        <a href="#">About Us</a>
-      </nav>
+
+    <nav id="navbar">
+      <a href="#">Computing</a>
+      <a href="#">Mobile</a>
+      <a href="#">Entertaiment</a>
+      <a href="#" id="aboutUs">About Us</a>
+    </nav>
   </header>
   <main>
     <section id="videoCard">
-      <h1>Best gaming graphics cards for 2024</h1>
+      <h1 class="black">Best gaming graphics cards for 2024</h1>
       <p>One of the best graphics cards that you can have in your computer
         in 2024 is the GeForce RTX 4070 super.
       </p>
