--- a/index.html
+++ b/index.html
@@ -17,30 +17,40 @@
 
 
     <nav id="navbar">
-      <a href="#">Computing</a>
+      <a href="#">Computer</a>
       <a href="#">Mobile</a>
       <a href="#">Entertaiment</a>
       <a href="#" id="aboutUs">About Us</a>
     </nav>
   </header>
   <main>
-    <section id="videoCard">
-      <h1 class="black">Best gaming graphics cards for 2024</h1>
-      <p>One of the best graphics cards that you can have in your computer
-        in 2024 is the GeForce RTX 4070 super.
-      </p>
+    <div id="videoCard">
+      <section class="videoCard-title">
+        <h1 id="pageTitle" class="black">Best gaming graphics card for 2024</h1>
+        <h4>One of the best graphics card that you can have in your computer
+          in 2024 is the Nvidia GeForce RTX 4090.
+        </h4>
+      </section>
 
-      <p>Specifications</p>
-      <p>GPU: AD104</p>
-      <p>GPU Cores: 7168</p>
-      <p>Boost Clock: 2,475 MHz</p>
-      <p>Video RAM: 12GB GDDR6X 21 Gbps</p>
-      <p>TGP: 200 watts</p>
-    </section>
+      <section class="videoCard-specifications">
+        <p style="color: red"><b>Specifications:</b></p>
+        <p><b>Shaders:</b> 16,432</p>
+        <p><b>Boost clock:</b> 2,520MHz</p>
+        <p><b>TFLOPs:</b> 82.6</p>
+        <p><b>Memory:</b> 24GB GDDR6X</p>
+        <p><b>Memory clock:</b> 21GT/s</p>
+        <p><b>Memory bandwidth:</b> 1,008GB/s</p>
+        <p><b>TGP:</b> 450W</p>
+      </section>
 
-  </main>
+      <section class="videoCard img">
+        <img id="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image" </main>
+      </section>
 
-  <script src="js/scripts.js"></script>
+    </div>
+
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
