the column and better view of details

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p><b>Memory clock:</b> 21GT/s</p>
         <p><b>Memory bandwidth:</b> 1,008GB/s</p>
         <p><b>TGP:</b> 450W</p>
+        <p style="color: red"><b>Price: 1900£</b></p>
       </section>
 
       <section class="videoCard img">
