pros and cons added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,29 @@
         <img id="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image" </main>
       </section>
 
+
     </div>
+
+    <div class="pros-cons-container">
+      <div class="pros">
+        <h2>Pros</h2>
+        <ul>
+          <li>+ Huge leaps in 4K gaming performance</li>
+          <li>+ Excellent ray tracing performance</li>
+          <li>+ High power and thermals, but manageable</li>
+          <li>+ DLSS 3 performance is off the charts</li>
+        </ul>
+      </div>
+      <div class="cons">
+        <h2>Cons</h2>
+        <ul>
+          <li>- Very expensive</li>
+          <li>- DLSS 3 image quality needs some work</li>
+        </ul>
+      </div>
+    </div>
+
+
 
 
     <script src="js/scripts.js"></script>
