extra text videocard modified

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="pros-cons-container">
       <div class="pros">
-        <h2>Pros</h2>
+        <h2 style="color: green;">Pros</h2>
         <ul>
           <li>+ Huge leaps in 4K gaming performance</li>
           <li>+ Excellent ray tracing performance</li>
@@ -62,13 +62,20 @@
         </ul>
       </div>
       <div class="cons">
-        <h2>Cons</h2>
+        <h2 style="color: red;">Cons</h2>
         <ul>
           <li>- Very expensive</li>
           <li>- DLSS 3 image quality needs some work</li>
         </ul>
       </div>
     </div>
+
+    <p id="videoCard-text">The <b>RTX 4090</b> is the <u>most powerful graphics card</u> ever produced,
+      it's also a <u><em style="color: red;">ridiculous waste of money.</em></u> That
+      does, of course, make it a challenging product to review, especially considering the average PC gamer's budget
+      for system upgrades.</p>
+
+
 
 
 
