--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </h4>
       </section>
 
-      <section class="videoCard-specifications">
+      <div class="videoCard-specifications">
         <p style="color: red"><b>Specifications:</b></p>
         <p><b>Shaders:</b> 16,432</p>
         <p><b>Boost clock:</b> 2,520MHz</p>
@@ -42,11 +42,11 @@
         <p><b>Memory bandwidth:</b> 1,008GB/s</p>
         <p><b>TGP:</b> 450W</p>
         <p style="color: red"><b>Price: 1900£</b></p>
-      </section>
+      </div>
 
-      <section class="videoCard img">
-        <img id="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image" </main>
-      </section>
+      <div class="videoCard img">
+        <img id="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
+      </div>
 
 
     </div>
@@ -86,8 +86,8 @@
       </div>
     </div>
 
-
-    <script src="js/scripts.js"></script>
+  </main>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
