more videocards added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,64 @@
       </div>
     </div>
 
+    <section class="extraVideocards">
+      <h1 class="otherVideocardsTitle">Other videocards that are worth buying</h1>
+      <span>Extra Video Cards</span>
+      <hr class="red-line" />
+    </section>
+
+
+    <div class="theVideoCards">
+      <div class="RX-7900">
+        <h4>AMD Radeon RX 7900 XTX</h4>
+        <img src="images/radeon-7900-xtx.jpeg" alt="Amd Radeon Rx 7900 XTX picture">
+        <p>The best AMD GPU</p>
+        <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2" class="radeonLink">View
+          it on Amazon</a>
+
+        <p class="content-RX7900">
+          The current standard is the RTX 4090. The graphics card that most closely embodies a next-generation
+          experience is this one. In addition, it's the priciest card. However, it's possibly less expensive than the
+          RTX 3090 was when inflation is taken into consideration.
+        </p>
+      </div>
+
+      <div class="GeForce-4070">
+        <h4>MSI GeForce RTX 4070 Super</h4>
+        <img src="images/msi-rtx-4070.jpg" alt="MSI GeForce RTX 4070 Super picture">
+        <p>Amazing GPU for 600£</p>
+        <a href="https://www.amazon.co.uk/MSI-GeForce-VENTUS-Gaming-Graphics/dp/B0CQMDD2WJ/ref=sr_1_1?crid=3B0ILONYWNJB8&dib=eyJ2IjoiMSJ9.KJ7ohBrTMR1k-YbvoMVY-ortzUCdpBQOeUwd1KEkak_kONZjQlx4KCL-eOIitQ8uVN2FCxEJQU2hst9hoLtZ4cFWdPM0xKskAS0INK2zrE-1LP_DcxS2TnsfWAadWkb_-aRp1HM4Ks2kA7AU1AZHWJMXxu1ehJS7ug1VTeeKQ90HLksUsFLVW0837HM6N_DQ961MkrS7RHRMEKDceksW_fBHQxNWqrSwMbbwq3cRlWTuXjjRjKfbYv_JhgyqdREduQoVJhqv8jtH0QFefBMbEeHpAc9Ryayxv7mCRoUac2Y.B41tEuex812OpdncnWFHmNL8ue7dOxVjkmRA9UlN8NE&dib_tag=se&keywords=Nvidia+GeForce+RTX+4070+Super&qid=1709232412&s=computers&sprefix=nvidia+geforce+rtx+4070+super%2Ccomputers%2C109&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
+          class="RTX4070Link">View it on Amazon</a>
+
+        <p class="content-RTX4070">
+          The GPU with the largest increase in core count within Nvidia's updated Ada lineup is also the first one out.
+          For the same price, it is therefore unquestionably better than the original RTX 4070. Although they are still
+          alluring alternatives, it is faster than both the less expensive GeForce and AMD RX 7900 GRE.
+        </p>
+      </div>
+
+      <div class="RTX-3090">
+        <h4>Asus GeForce RTX 3090</h4>
+        <img src="images/ASUS-RTX-3090.png" alt="Amd Radeon Rx 7900 XTX picture">
+        <p>Good performace for the price</p>
+        <a href="https://www.amazon.co.uk/ASUS-Graphics-Axial-tech-pressure-ROG-STRIX-RTX3090-O24G-GAMING/dp/B08HN51T8Q/ref=sr_1_1?crid=12WKALDP6B7QR&dib=eyJ2IjoiMSJ9.fjfILQ7VdqhkbamRlJS0dQfJkV6hKC9Wy77LJsBZFc4mFhvOApkwTqdiTdSUyVIH78QtYUf7hmUs5umT-_SchiWvzePARx68xDtVqbKE-enA14NaReCs6odWRYcspHaUw0Rr5ed6oYNosTzVW1imHOE_CjXXUSP-ISdasgE8czvw-LTwPmnanw4oJfAzW9tzrNHAsiYBvq-FUjFJhqw4iUziN5ZN1IyH61UMWFR_KhAKMGaXUPxdJhYpskTxFjDzG0l8vMZVB1pX5-AG5YDHEJmXtM9OaeJMr4ak9JRW-u4.dBZVV07jqCX1B_9AWVQzxGgLgrCBHSaCFAG2cpoH-lE&dib_tag=se&keywords=Asus+GeForce+RTX+3090&qid=1709230286&s=computers&sprefix=asus+geforce+rtx+3090%2Ccomputers%2C104&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
+          class="RTX3090Link">View it on Amazon</a>
+
+        <p class="content-RTX3090">
+          The ROG Strix graphics card combines aesthetic synergy with ROG motherboards through its metal-accented shroud
+          and customizable RGB lighting. Its engineering excellence features premium components for instant,
+          high-wattage power delivery, while the advanced cooling system includes a MaxContact heat spreader and triple
+          Axial-tech fans for superior thermal management. Additionally, intuitive software like GPU Tweak II, XSplit,
+          and wtfast enhance gaming experiences with customization, streaming, and stable connections.
+        </p>
+      </div>
+
+    </div>
+
+
+
+
+
   </main>
   <script src="js/scripts.js"></script>
 </body>
