redoing the website, starting with mobile

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 
 <body>
   <header>
-    <section id="siteName">
+    <section class="siteName">
       <h2>New Technology </h2>
       <h2>Trending</h2>
     </section>
 
+    <div id="menuToggler">
+      &#8801;
+    </div>
 
-    <nav id="navbar">
-      <a href="#">Computer</a>
-      <a href="#">Mobile</a>
-      <a href="#">Entertaiment</a>
-      <a href="#" id="aboutUs">About Us</a>
+    <nav id="menu">
+      <ul>
+        <li><a href="#" class="active">Computer</a></li>
+        <li><a href="#">Mobile</a></li>
+        <li><a href="#">Entertaiment</a></li>
+        <li><a href="#" id="aboutUs">About Us</a></li>
+      </ul>
+
     </nav>
   </header>
   <main>
