getting rid of extra coding

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <nav id="menu">
       <ul>
-        <li><a href="#" class="active">Computer</a></li>
-        <li><a href="#">Mobile</a></li>
-        <li><a href="#">Entertaiment</a></li>
-        <li><a href="#" id="aboutUs">About Us</a></li>
+        <a href="#Computer" class="active">Computer</a>
+        <a href="#Mobile">Mobile</a>
+        <a href="#Entertaiment">Entertaiment</a>
+        <a href="#AboutUs" id="aboutUs">About Us</a>
       </ul>
 
     </nav>
