--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div id="menuToggler">
       &#8801;
     </div>
-
     <nav id="menu">
       <ul>
         <a href="#Computer" class="active">Computer</a>
@@ -30,13 +29,17 @@
     </nav>
   </header>
   <main>
+    <h1 id="pageTitle" class="black">Best gaming graphics card for 2024</h1>
     <div id="videoCard">
       <section class="videoCard-title">
-        <h1 id="pageTitle" class="black">Best gaming graphics card for 2024</h1>
         <h4>One of the best graphics card that you can have in your computer
           in 2024 is the Nvidia GeForce RTX 4090.
         </h4>
       </section>
+
+      <div class="videoCardImg">
+        <img class="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
+      </div>
 
       <div class="videoCard-specifications">
         <p style="color: red"><b>Specifications:</b></p>
@@ -49,11 +52,6 @@
         <p><b>TGP:</b> 450W</p>
         <p style="color: red"><b>Price: 1900£</b></p>
       </div>
-
-      <div class="videoCard img">
-        <img id="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
-      </div>
-
 
     </div>
 
