body text and pictures for phone updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="videoCard-specifications">
-        <p style="color: red"><b>Specifications:</b></p>
+        <p class="specifications">Specifications</p>
         <p><b>Shaders:</b> 16,432</p>
         <p><b>Boost clock:</b> 2,520MHz</p>
         <p><b>TFLOPs:</b> 82.6</p>
@@ -47,7 +47,7 @@
         <p><b>Memory clock:</b> 21GT/s</p>
         <p><b>Memory bandwidth:</b> 1,008GB/s</p>
         <p><b>TGP:</b> 450W</p>
-        <p style="color: red"><b>Price: 1900£</b></p>
+        <p class="price"><b>Price: 1900£</b></p>
       </div>
 
     </div>
