buy videocard button, other videocards done

--- a/index.html
+++ b/index.html
@@ -76,19 +76,16 @@
       does, of course, make it a challenging product to review, especially considering the average PC gamer's budget
       for system upgrades.</p>
 
-    <div class="buy-videocard">
+    <div class="buy-videocard-container">
       <a href="https://www.amazon.co.uk/VIPERA-NVIDIA-GeForce-Founders-Graphic/dp/B0BJFRT43X/ref=sr_1_9?crid=2HG8VOJHXKR7V&dib=eyJ2IjoiMSJ9.pYmX2Saae_TPhlf38go1x0PoXtB_wocnw9sJx_soBMBk4zjqyshrYoZYyu-6l87S3jm6q2jRLPP-QBpNpYPwwBJZJvRxWE7mKsbSeKLWJQzXZg9cGgaR5DlHLf7aK1SFaWazNw2ON3SM4ZfB0OrMnZz7hJGj62gAP0gFOCpizrN2H-GLZH-OMoPcV8b2WHCZrcY-R-FlE_SlyviYexkAuaBTYbOC996KwfgQetewEU0.3nMtwA9na0P0NBAvsalLX7d2iOtQasHcxALUAlnRPYk&dib_tag=se&keywords=nvidia+gtx+4090&qid=1709211389&sprefix=nvidia+gtx+4090%2Caps%2C96&sr=8-9&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
         class="button-buy-videocard">
-        BUY FOR 2,200£ ON AMAZON
+        BUY FOR £2,200 ON AMAZON
       </a>
-
-      <div class="amazon-logo">
-        <img src="images/amazon-logo.png" alt="Amazon Logo" />
-      </div>
+      <img class="amazon-logo" src="images/amazon-logo.png" alt="Amazon Logo" />
     </div>
 
     <section class="extraVideocards">
-      <h1 class="otherVideocardsTitle">Other videocards that are worth buying</h1>
+      <h1>Other videocards that are worth buying</h1>
       <span>Extra Video Cards</span>
       <hr class="red-line" />
     </section>
