extra video cards updated

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
       <div class="RX-7900">
         <h4>AMD Radeon RX 7900 XTX</h4>
         <img src="images/radeon-7900-xtx.jpeg" alt="Amd Radeon Rx 7900 XTX picture">
-        <p>The best AMD GPU</p>
-        <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2" class="radeonLink">View
-          it on Amazon</a>
+        <section id="RX-7900-container">
+          <p>The best AMD GPU</p>
+          <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2"
+            class="radeonLink">View it on Amazon</a>
+        </section>
 
         <p class="content-RX7900">
           The current standard is the RTX 4090. The graphics card that most closely embodies a next-generation
