--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <p id="videoCard-text">The <b>RTX 4090</b> is the <u>most powerful graphics card</u> ever produced,
-      it's also a <u><em style="color: red;">ridiculous waste of money.</em></u> That
+      it's also a <u>ridiculous waste of money.</u> That
       does, of course, make it a challenging product to review, especially considering the average PC gamer's budget
       for system upgrades.</p>
 
