--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
 
       <div class="videoCardImg">
-        <img class="asd" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
+        <img class="" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
       </div>
 
       <div class="videoCard-specifications">
@@ -94,7 +94,7 @@
     <div class="theVideoCards">
       <div class="RX-7900">
         <h4>AMD Radeon RX 7900 XTX</h4>
-        <img src="images/radeon-7900-xtx.jpeg" alt="Amd Radeon Rx 7900 XTX picture">
+        <img class="extraVideocardsImg" src="images/radeon-7900-xtx.jpeg" alt="Amd Radeon Rx 7900 XTX picture">
         <section id="RX-7900-container">
           <p>The best AMD GPU</p>
           <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2"
@@ -110,7 +110,7 @@
 
       <div class="GeForce-4070">
         <h4>MSI GeForce RTX 4070 Super</h4>
-        <img src="images/msi-rtx-4070.jpg" alt="MSI GeForce RTX 4070 Super picture">
+        <img class="extraVideocardsImg" src="images/msi-rtx-4070.jpg" alt="MSI GeForce RTX 4070 Super picture">
         <section class="GeForce-4070-container">
           <p>Amazing GPU for £600</p>
           <a href="https://www.amazon.co.uk/MSI-GeForce-VENTUS-Gaming-Graphics/dp/B0CQMDD2WJ/ref=sr_1_1?crid=3B0ILONYWNJB8&dib=eyJ2IjoiMSJ9.KJ7ohBrTMR1k-YbvoMVY-ortzUCdpBQOeUwd1KEkak_kONZjQlx4KCL-eOIitQ8uVN2FCxEJQU2hst9hoLtZ4cFWdPM0xKskAS0INK2zrE-1LP_DcxS2TnsfWAadWkb_-aRp1HM4Ks2kA7AU1AZHWJMXxu1ehJS7ug1VTeeKQ90HLksUsFLVW0837HM6N_DQ961MkrS7RHRMEKDceksW_fBHQxNWqrSwMbbwq3cRlWTuXjjRjKfbYv_JhgyqdREduQoVJhqv8jtH0QFefBMbEeHpAc9Ryayxv7mCRoUac2Y.B41tEuex812OpdncnWFHmNL8ue7dOxVjkmRA9UlN8NE&dib_tag=se&keywords=Nvidia+GeForce+RTX+4070+Super&qid=1709232412&s=computers&sprefix=nvidia+geforce+rtx+4070+super%2Ccomputers%2C109&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
@@ -126,7 +126,7 @@
 
       <div class="RTX-3090">
         <h4>Asus GeForce RTX 3090</h4>
-        <img src="images/ASUS-RTX-3090.png" alt="Amd Radeon Rx 7900 XTX picture">
+        <img class="extraVideocardsImg" src="images/ASUS-RTX-3090.png" alt="Amd Radeon Rx 7900 XTX picture">
         <section class="RTX-3090-container">
           <p>Good performace for the price</p>
           <a href="https://www.amazon.co.uk/ASUS-Graphics-Axial-tech-pressure-ROG-STRIX-RTX3090-O24G-GAMING/dp/B08HN51T8Q/ref=sr_1_1?crid=12WKALDP6B7QR&dib=eyJ2IjoiMSJ9.fjfILQ7VdqhkbamRlJS0dQfJkV6hKC9Wy77LJsBZFc4mFhvOApkwTqdiTdSUyVIH78QtYUf7hmUs5umT-_SchiWvzePARx68xDtVqbKE-enA14NaReCs6odWRYcspHaUw0Rr5ed6oYNosTzVW1imHOE_CjXXUSP-ISdasgE8czvw-LTwPmnanw4oJfAzW9tzrNHAsiYBvq-FUjFJhqw4iUziN5ZN1IyH61UMWFR_KhAKMGaXUPxdJhYpskTxFjDzG0l8vMZVB1pX5-AG5YDHEJmXtM9OaeJMr4ak9JRW-u4.dBZVV07jqCX1B_9AWVQzxGgLgrCBHSaCFAG2cpoH-lE&dib_tag=se&keywords=Asus+GeForce+RTX+3090&qid=1709230286&s=computers&sprefix=asus+geforce+rtx+3090%2Ccomputers%2C104&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
