extra videocards line done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="pros-cons-container">
       <div class="pros">
-        <h2 style="color: green;">Pros</h2>
+        <h2>Pros</h2>
         <ul>
           <li>+ Huge leaps in 4K gaming performance</li>
           <li>+ Excellent ray tracing performance</li>
@@ -63,7 +63,7 @@
         </ul>
       </div>
       <div class="cons">
-        <h2 style="color: red;">Cons</h2>
+        <h2>Cons</h2>
         <ul>
           <li>- DLSS 3 image quality needs some work</li>
           <li>- Very expensive</li>
