--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       for system upgrades.</p>
 
     <div class="buy-videocard-container">
-      <a href="https://www.amazon.co.uk/VIPERA-NVIDIA-GeForce-Founders-Graphic/dp/B0BJFRT43X/ref=sr_1_9?crid=2HG8VOJHXKR7V&dib=eyJ2IjoiMSJ9.pYmX2Saae_TPhlf38go1x0PoXtB_wocnw9sJx_soBMBk4zjqyshrYoZYyu-6l87S3jm6q2jRLPP-QBpNpYPwwBJZJvRxWE7mKsbSeKLWJQzXZg9cGgaR5DlHLf7aK1SFaWazNw2ON3SM4ZfB0OrMnZz7hJGj62gAP0gFOCpizrN2H-GLZH-OMoPcV8b2WHCZrcY-R-FlE_SlyviYexkAuaBTYbOC996KwfgQetewEU0.3nMtwA9na0P0NBAvsalLX7d2iOtQasHcxALUAlnRPYk&dib_tag=se&keywords=nvidia+gtx+4090&qid=1709211389&sprefix=nvidia+gtx+4090%2Caps%2C96&sr=8-9&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
-        class="button-buy-videocard">
+      <a
+        href="https://www.amazon.co.uk/VIPERA-NVIDIA-GeForce-Founders-Graphic/dp/B0BJFRT43X/ref=sr_1_9?crid=2HG8VOJHXKR7V&dib=eyJ2IjoiMSJ9.pYmX2Saae_TPhlf38go1x0PoXtB_wocnw9sJx_soBMBk4zjqyshrYoZYyu-6l87S3jm6q2jRLPP-QBpNpYPwwBJZJvRxWE7mKsbSeKLWJQzXZg9cGgaR5DlHLf7aK1SFaWazNw2ON3SM4ZfB0OrMnZz7hJGj62gAP0gFOCpizrN2H-GLZH-OMoPcV8b2WHCZrcY-R-FlE_SlyviYexkAuaBTYbOC996KwfgQetewEU0.3nMtwA9na0P0NBAvsalLX7d2iOtQasHcxALUAlnRPYk&dib_tag=se&keywords=nvidia+gtx+4090&qid=1709211389&sprefix=nvidia+gtx+4090%2Caps%2C96&sr=8-9&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f">
         BUY FOR £2,200 ON AMAZON
       </a>
       <img class="amazon-logo" src="images/amazon-logo.png" alt="Amazon Logo" />
@@ -97,8 +97,7 @@
         <img class="extraVideocardsImg" src="images/radeon-7900-xtx.jpeg" alt="Amd Radeon Rx 7900 XTX picture">
         <section>
           <p>The best AMD GPU</p>
-          <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2"
-            class="radeonLink">View it on Amazon</a>
+          <a href="https://www.amazon.co.uk/ASUS-Gaming-Radeon-Graphics-DisplayPort/dp/B0BQCFCJK2">View it on Amazon</a>
         </section>
 
         <p>
@@ -113,8 +112,9 @@
         <img class="extraVideocardsImg" src="images/msi-rtx-4070.jpg" alt="MSI GeForce RTX 4070 Super picture">
         <section>
           <p>Amazing GPU for £600</p>
-          <a href="https://www.amazon.co.uk/MSI-GeForce-VENTUS-Gaming-Graphics/dp/B0CQMDD2WJ/ref=sr_1_1?crid=3B0ILONYWNJB8&dib=eyJ2IjoiMSJ9.KJ7ohBrTMR1k-YbvoMVY-ortzUCdpBQOeUwd1KEkak_kONZjQlx4KCL-eOIitQ8uVN2FCxEJQU2hst9hoLtZ4cFWdPM0xKskAS0INK2zrE-1LP_DcxS2TnsfWAadWkb_-aRp1HM4Ks2kA7AU1AZHWJMXxu1ehJS7ug1VTeeKQ90HLksUsFLVW0837HM6N_DQ961MkrS7RHRMEKDceksW_fBHQxNWqrSwMbbwq3cRlWTuXjjRjKfbYv_JhgyqdREduQoVJhqv8jtH0QFefBMbEeHpAc9Ryayxv7mCRoUac2Y.B41tEuex812OpdncnWFHmNL8ue7dOxVjkmRA9UlN8NE&dib_tag=se&keywords=Nvidia+GeForce+RTX+4070+Super&qid=1709232412&s=computers&sprefix=nvidia+geforce+rtx+4070+super%2Ccomputers%2C109&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
-            class="RTX4070Link">View it on Amazon</a>
+          <a
+            href="https://www.amazon.co.uk/MSI-GeForce-VENTUS-Gaming-Graphics/dp/B0CQMDD2WJ/ref=sr_1_1?crid=3B0ILONYWNJB8&dib=eyJ2IjoiMSJ9.KJ7ohBrTMR1k-YbvoMVY-ortzUCdpBQOeUwd1KEkak_kONZjQlx4KCL-eOIitQ8uVN2FCxEJQU2hst9hoLtZ4cFWdPM0xKskAS0INK2zrE-1LP_DcxS2TnsfWAadWkb_-aRp1HM4Ks2kA7AU1AZHWJMXxu1ehJS7ug1VTeeKQ90HLksUsFLVW0837HM6N_DQ961MkrS7RHRMEKDceksW_fBHQxNWqrSwMbbwq3cRlWTuXjjRjKfbYv_JhgyqdREduQoVJhqv8jtH0QFefBMbEeHpAc9Ryayxv7mCRoUac2Y.B41tEuex812OpdncnWFHmNL8ue7dOxVjkmRA9UlN8NE&dib_tag=se&keywords=Nvidia+GeForce+RTX+4070+Super&qid=1709232412&s=computers&sprefix=nvidia+geforce+rtx+4070+super%2Ccomputers%2C109&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f">View
+            it on Amazon</a>
         </section>
 
         <p>
@@ -129,8 +129,9 @@
         <img class="extraVideocardsImg" src="images/ASUS-RTX-3090.png" alt="Amd Radeon Rx 7900 XTX picture">
         <section>
           <p>Good performace for the price</p>
-          <a href="https://www.amazon.co.uk/ASUS-Graphics-Axial-tech-pressure-ROG-STRIX-RTX3090-O24G-GAMING/dp/B08HN51T8Q/ref=sr_1_1?crid=12WKALDP6B7QR&dib=eyJ2IjoiMSJ9.fjfILQ7VdqhkbamRlJS0dQfJkV6hKC9Wy77LJsBZFc4mFhvOApkwTqdiTdSUyVIH78QtYUf7hmUs5umT-_SchiWvzePARx68xDtVqbKE-enA14NaReCs6odWRYcspHaUw0Rr5ed6oYNosTzVW1imHOE_CjXXUSP-ISdasgE8czvw-LTwPmnanw4oJfAzW9tzrNHAsiYBvq-FUjFJhqw4iUziN5ZN1IyH61UMWFR_KhAKMGaXUPxdJhYpskTxFjDzG0l8vMZVB1pX5-AG5YDHEJmXtM9OaeJMr4ak9JRW-u4.dBZVV07jqCX1B_9AWVQzxGgLgrCBHSaCFAG2cpoH-lE&dib_tag=se&keywords=Asus+GeForce+RTX+3090&qid=1709230286&s=computers&sprefix=asus+geforce+rtx+3090%2Ccomputers%2C104&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f"
-            class="RTX3090Link">View it on Amazon</a>
+          <a
+            href="https://www.amazon.co.uk/ASUS-Graphics-Axial-tech-pressure-ROG-STRIX-RTX3090-O24G-GAMING/dp/B08HN51T8Q/ref=sr_1_1?crid=12WKALDP6B7QR&dib=eyJ2IjoiMSJ9.fjfILQ7VdqhkbamRlJS0dQfJkV6hKC9Wy77LJsBZFc4mFhvOApkwTqdiTdSUyVIH78QtYUf7hmUs5umT-_SchiWvzePARx68xDtVqbKE-enA14NaReCs6odWRYcspHaUw0Rr5ed6oYNosTzVW1imHOE_CjXXUSP-ISdasgE8czvw-LTwPmnanw4oJfAzW9tzrNHAsiYBvq-FUjFJhqw4iUziN5ZN1IyH61UMWFR_KhAKMGaXUPxdJhYpskTxFjDzG0l8vMZVB1pX5-AG5YDHEJmXtM9OaeJMr4ak9JRW-u4.dBZVV07jqCX1B_9AWVQzxGgLgrCBHSaCFAG2cpoH-lE&dib_tag=se&keywords=Asus+GeForce+RTX+3090&qid=1709230286&s=computers&sprefix=asus+geforce+rtx+3090%2Ccomputers%2C104&sr=1-1&ufe=app_do%3Aamzn1.fos.d7e5a2de-8759-4da3-993c-d11b6e3d217f">View
+            it on Amazon</a>
         </section>
 
         <p>
