extra pages added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       &#8801;
     </div>
     <nav id="menu">
-      <a href="#Computer" class="active">Computer</a>
-      <a href="#Mobile">Mobile</a>
-      <a href="#Entertaiment">Entertaiment</a>
-      <a href="#AboutUs">About Us</a>
+      <a href="index.html" class="active">Computer</a>
+      <a href="mobile.html">Mobile</a>
+      <a href="entertaiment.html">Entertaiment</a>
+      <a href="about-us.html">About Us</a>
     </nav>
   </header>
   <main>
