active page done

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -19,9 +19,9 @@
       &#8801;
     </div>
     <nav id="menu">
-      <a href="index.html" class="active">Computer</a>
+      <a href="index.html">Computer</a>
       <a href="mobile.html">Mobile</a>
-      <a href="entertaiment.html">Entertaiment</a>
+      <a href="entertaiment.html" class="active">Entertaiment</a>
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
