--- a/about-us.html
+++ b/about-us.html
@@ -19,10 +19,10 @@
       &#8801;
     </div>
     <nav id="menu">
-      <a href="index.html" class="active">Computer</a>
+      <a href="index.html">Computer</a>
       <a href="mobile.html">Mobile</a>
       <a href="entertaiment.html">Entertaiment</a>
-      <a href="about-us.html">About Us</a>
+      <a href="about-us.html" class="active">About Us</a>
     </nav>
   </header>
 
