--- a/mobile.html
+++ b/mobile.html
@@ -19,8 +19,8 @@
       &#8801;
     </div>
     <nav id="menu">
-      <a href="index.html" class="active">Computer</a>
-      <a href="mobile.html">Mobile</a>
+      <a href="index.html">Computer</a>
+      <a href="mobile.html" class="active">Mobile</a>
       <a href="entertaiment.html">Entertaiment</a>
       <a href="about-us.html">About Us</a>
     </nav>
