--- a/entertaiment.html
+++ b/entertaiment.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header>
+  <header id="header-box">
     <section class="siteName">
       <h2>New Technology </h2>
       <h2>Trending</h2>
@@ -25,11 +25,30 @@
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
+  <main id="no-padding">
+    <div id="backgroundImg">
+      <img src="images/tech-2024.jpeg" alt="geforce-4070-super videoCard image">
+    </div>
+    <div class="content">
+      <p id="writing">
+        Our Sun is a 4.5 billion-year-old yellow dwarf star – a hot glowing ball of hydrogen and helium – at the center
+        of
+        our solar system. It's about 93 million miles (150 million kilometers) from Earth and it's our solar system's
+        only
+        star. Without the Sun's energy, life as we know it could not exist on our home planet.
+      </p>
 
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+
+    </div>
 
   </main>
   <script src="js/scripts.js"></script>
 </body>
-
 
 </html>
