next image done for apple vision

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -27,7 +27,7 @@
   </header>
   <main id="no-padding">
     <div id="backgroundImg">
-      <img src="images/tech-2024.jpeg" alt="geforce-4070-super videoCard image">
+      <img src="images/tech-2024.jpeg" alt="2024 tech">
     </div>
     <div class="content">
       <p id="writing">
@@ -37,6 +37,20 @@
         only
         star. Without the Sun's energy, life as we know it could not exist on our home planet.
       </p>
+
+      <div class="slideshow-container">
+        <div class="mySlides">
+          <img src="images/apple-vision-pro.jpg">
+        </div>
+        <div class="mySlides">
+          <img src="images/apple-vision-pro-person.jpeg">
+        </div>
+        <div class="mySlides">
+          <img src="images/apple-vision-pro-person-reading.jpeg">
+        </div>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
+      </div>
 
       <br></br>
       <br></br>
