apple content look modified

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -30,34 +30,60 @@
       <img src="images/tech-2024.jpeg" alt="2024 tech">
     </div>
     <div class="content">
-      <p id="writing">
-        Our Sun is a 4.5 billion-year-old yellow dwarf star – a hot glowing ball of hydrogen and helium – at the center
-        of
-        our solar system. It's about 93 million miles (150 million kilometers) from Earth and it's our solar system's
-        only
-        star. Without the Sun's energy, life as we know it could not exist on our home planet.
-      </p>
+      <section id="apple-vision-pro">
+        <h2>Apple vision pro</h2>
+        <p>
+          A product that will make you feel that enything is possible.
+        </p>
+        <div class="slideshow-container">
+          <div class="mySlides">
+            <img id="apple-product" class="as" src="images/apple-vision-pro.jpg">
+          </div>
+          <div class="mySlides">
+            <img class="as" src="images/apple-vision-pro-person.jpeg">
+          </div>
+          <div class="mySlides">
+            <img class="as" src="images/apple-vision-pro-person-reading.jpeg">
+          </div>
+          <a class="prev">&#10094;</a>
+          <a class="next">&#10095;</a>
+        </div>
 
-      <div class="slideshow-container">
-        <div class="mySlides">
-          <img src="images/apple-vision-pro.jpg">
-        </div>
-        <div class="mySlides">
-          <img src="images/apple-vision-pro-person.jpeg">
-        </div>
-        <div class="mySlides">
-          <img src="images/apple-vision-pro-person-reading.jpeg">
-        </div>
-        <a class="prev">&#10094;</a>
-        <a class="next">&#10095;</a>
-      </div>
+        <div id="apple-content">
+          <p>The Apple Vision Pro is a cutting-edge spatial computer that blends digital content with the physical
+            world, creating a groundbreaking experience. It features a three-dimensional user interface that can be
+            controlled with eye movement, hand gestures, and voice commands. The Vision Pro's design is built on
+            Apple's legacy of high-performance products, encapsulating a vast amount of technology into an elegant and
+            compact wearable device.
+          </p>
+          <p>For immersive viewing, the Vision Pro is equipped with ultra-high-resolution displays and an advanced
+            Spatial Audio system, ensuring an engrossing audiovisual experience. Its display system uses micro-OLED
+            technology to deliver an astonishing 23 million pixels across two displays, ensuring crystal-clear images.
+          </p>
+          <p>Privacy and security are core to the Vision Pro, featuring a secure authentication system that respects
+            user privacy and keeps personal data controlled by the user. It has been crafted with an environmental
+            focus, incorporating recycled materials throughout its design.
+          </p>
+          <p>For those looking for an innovative device that marries high technology with user-centric design and
+            sustainability, the Apple Vision Pro sets a new benchmark in personal computing devices.
+          </p>
+          <p>For more detailed information and technical specifications, you can visit the official
+            <a id="vision-pro-website" href="https://www.apple.com/apple-vision-pro/">Apple website</a>.
+          </p>
 
-      <br></br>
-      <br></br>
-      <br></br>
-      <br></br>
-      <br></br>
-      <br></br>
+        </div>
+
+    </div>
+    </section>
+
+
+
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
 
     </div>
 
