added picture for AI

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -37,13 +37,13 @@
         </p>
         <div class="slideshow-container">
           <div class="mySlides">
-            <img id="apple-product" class="as" src="images/apple-vision-pro.jpg">
+            <img id="apple-product" src="images/apple-vision-pro.jpg">
           </div>
           <div class="mySlides">
-            <img class="as" src="images/apple-vision-pro-person.jpeg">
+            <img src="images/apple-vision-pro-person.jpeg">
           </div>
           <div class="mySlides">
-            <img class="as" src="images/apple-vision-pro-person-reading.jpeg">
+            <img src="images/apple-vision-pro-person-reading.jpeg">
           </div>
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
@@ -79,6 +79,7 @@
 
         <section id="AI">
           <h2>Artificial Intelligence (AI) and Machine Learning</h2>
+          <img src="images/AI-and-machine-learning.jpg">
 
           <div id="AI-content">
             <p class="subtitle">
