edited pictures iphone

--- a/mobile.html
+++ b/mobile.html
@@ -26,7 +26,31 @@
     </nav>
   </header>
 
-
+  <main>
+    <section class="iphone">
+      <h2>
+        Iphone 15 Pro Max
+      </h2>
+      <div class="slideshow-container">
+        <div class="mySlides">
+          <img src="images/iphones.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone3.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone4.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone5.jpg" alt="">
+        </div>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
+      </div>
+    </section>
   </main>
   <script src="js/scripts.js"></script>
 </body>
