--- a/entertaiment.html
+++ b/entertaiment.html
@@ -25,11 +25,13 @@
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
+
   <main id="no-padding">
     <div id="backgroundImg">
       <img src="images/tech-2024.jpeg" alt="2024 tech">
     </div>
     <div class="content">
+
       <section id="apple-vision-pro">
         <h2>Apple vision pro</h2>
         <p>
@@ -77,51 +79,105 @@
           </p>
         </div>
 
-        <section id="AI">
-          <h2>Artificial Intelligence (AI) and Machine Learning</h2>
-          <img src="images/AI-and-machine-learning.jpg">
+      </section>
 
-          <div id="AI-content">
-            <p class="subtitle">
-              Introduction to AI and ML
-            </p>
-            <p>
-              Building intelligent machines that can carry out tasks that normally require human intelligence is the
-              goal of the broad field of computer science known as artificial intelligence (AI). Though there are many
-              different approaches to the multidisciplinary science of artificial intelligence (AI), developments in
-              deep learning and machine learning are fundamentally changing almost every area of the IT sector. As a
-              subset of artificial intelligence, machine learning is the process of utilising statistical methods to let
-              computers "learn" from data and make judgements with little help from humans.
-            </p>
-            <p class="subtitle">
-              Applications and Impact
-            </p>
-            <p>
-              AI and ML have a wide range of applications that are always changing. AI systems in the healthcare
-              industry are significantly more capable than humans in processing large amounts of data and identifying
-              patterns in it, which helps with early disease identification and personalised treatment. AI powers
-              algorithmic trading and risk management in the financial sector, and it powers the algorithms that enable
-              self-driving cars in the transportation sector. AI and ML also improve user experiences by making tailored
-              recommendations for entertainment and retail. Each of these apps has a significant impact on our daily
-              lives by streamlining procedures and enhancing the calibre and customisation of services.
-            </p>
-            <p class="subtitle">
-              Challenges and Ethical Considerations
-            </p>
-            <p>
-              Even with all of its promise, AI and ML come with a number of serious drawbacks and moral dilemmas. Jobs
-              that are automated bring about socioeconomic changes that need to be carefully managed and workers
-              retrained. Bias in AI systems is a concern since algorithms may reinforce and magnify societal biases
-              found in the training set. Privacy is a crucial concern as artificial intelligence systems that utilise
-              personal data for decision-making may result in invasive monitoring. It is crucial to guarantee the moral
-              use of AI and ML, which calls for open procedures, fair data representation, and ongoing supervision.
-            </p>
+      <section id="AI">
+        <h2>Artificial Intelligence (AI) and Machine Learning</h2>
+        <img src="images/AI-and-machine-learning.jpg">
+
+        <div id="AI-content">
+          <p class="subtitle">
+            Introduction to AI and ML
+          </p>
+          <p>
+            Building intelligent machines that can carry out tasks that normally require human intelligence is the
+            goal of the broad field of computer science known as artificial intelligence (AI). Though there are many
+            different approaches to the multidisciplinary science of artificial intelligence (AI), developments in
+            deep learning and machine learning are fundamentally changing almost every area of the IT sector. As a
+            subset of artificial intelligence, machine learning is the process of utilising statistical methods to let
+            computers "learn" from data and make judgements with little help from humans.
+          </p>
+          <p class="subtitle">
+            Applications and Impact
+          </p>
+          <p>
+            AI and ML have a wide range of applications that are always changing. AI systems in the healthcare
+            industry are significantly more capable than humans in processing large amounts of data and identifying
+            patterns in it, which helps with early disease identification and personalised treatment. AI powers
+            algorithmic trading and risk management in the financial sector, and it powers the algorithms that enable
+            self-driving cars in the transportation sector. AI and ML also improve user experiences by making tailored
+            recommendations for entertainment and retail. Each of these apps has a significant impact on our daily
+            lives by streamlining procedures and enhancing the calibre and customisation of services.
+          </p>
+          <p class="subtitle">
+            Challenges and Ethical Considerations
+          </p>
+          <p>
+            Even with all of its promise, AI and ML come with a number of serious drawbacks and moral dilemmas. Jobs
+            that are automated bring about socioeconomic changes that need to be carefully managed and workers
+            retrained. Bias in AI systems is a concern since algorithms may reinforce and magnify societal biases
+            found in the training set. Privacy is a crucial concern as artificial intelligence systems that utilise
+            personal data for decision-making may result in invasive monitoring. It is crucial to guarantee the moral
+            use of AI and ML, which calls for open procedures, fair data representation, and ongoing supervision.
+          </p>
+        </div>
+
+      </section>
+
+      <section id="moonwalkers">
+        <h2>Moonwalkers shoes</h2>
+        <p>
+          Moonwalkers™ are the first-ever mobility device that allows you to walk at the speed of a run. Designed
+          with an adaptive A.I. drivetrain, you can cover more distance - at your own pace.
+        </p>
+        <div class="slideshow-container">
+          <div class="mySlides">
+            <img src="images/moonwalkers-shoes-gif.gif">
           </div>
+          <div class="mySlides">
+            <img src="images/moonwalkers-shoes-1.jpg">
+          </div>
+          <div class="mySlides">
+            <img src="images/moonwalkers-shoes-2.jpg">
+          </div>
+          <a class="prev">&#10094;</a>
+          <a class="next">&#10095;</a>
+        </div>
 
-        </section>
+        <div id="moonwalkers-content">
+          <p>
+            The Apple Vision Pro is a cutting-edge spatial computer that blends digital content with the physical
+            world, creating a groundbreaking experience. It features a three-dimensional user interface that can be
+            controlled with eye movement, hand gestures, and voice commands. The Vision Pro's design is built on
+            Apple's legacy of high-performance products, encapsulating a vast amount of technology into an elegant
+            and
+            compact wearable device.
+          </p>
+          <p>
+            For immersive viewing, the Vision Pro is equipped with ultra-high-resolution displays and an advanced
+            Spatial Audio system, ensuring an engrossing audiovisual experience. Its display system uses micro-OLED
+            technology to deliver an astonishing 23 million pixels across two displays, ensuring crystal-clear
+            images.
+          </p>
+          <p>
+            Privacy and security are core to the Vision Pro, featuring a secure authentication system that respects
+            user privacy and keeps personal data controlled by the user. It has been crafted with an environmental
+            focus, incorporating recycled materials throughout its design.
+          </p>
+          <p>
+            For those looking for an innovative device that marries high technology with user-centric design and
+            sustainability, the Apple Vision Pro sets a new benchmark in personal computing devices.
+          </p>
+          <p>
+            For more detailed information and technical specifications, you can visit the official
+            <a id="vision-pro-website" href="https://www.apple.com/apple-vision-pro/">Apple website</a>.
+          </p>
+        </div>
+
+      </section>
 
     </div>
-    </section>
+
 
 
 
