moon shoes context added

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -146,31 +146,30 @@
 
         <div id="moonwalkers-content">
           <p>
-            The Apple Vision Pro is a cutting-edge spatial computer that blends digital content with the physical
-            world, creating a groundbreaking experience. It features a three-dimensional user interface that can be
-            controlled with eye movement, hand gestures, and voice commands. The Vision Pro's design is built on
-            Apple's legacy of high-performance products, encapsulating a vast amount of technology into an elegant
-            and
-            compact wearable device.
+            You can walk in a completely different way with the moonwalkers, a unique style of footwear. With its
+            wheeled form, you can go faster than you would normally be able to walk on surfaces—almost like sprinting
+            but with less impact. The ergonomic hinge mechanism in the shoes helps you propel yourself forward
+            effortlessly by maintaining the correct alignment of your feet and ankles.
           </p>
           <p>
-            For immersive viewing, the Vision Pro is equipped with ultra-high-resolution displays and an advanced
-            Spatial Audio system, ensuring an engrossing audiovisual experience. Its display system uses micro-OLED
-            technology to deliver an astonishing 23 million pixels across two displays, ensuring crystal-clear
-            images.
+            Their adaptability is a significant benefit. The big wheels are capable of handling a variety of conditions,
+            including rugged paths and smooth ones. They are easy to put on and take off thanks to the quick-release
+            buckles. Amazingly, they can be fastened to any type of shoe, so you can enjoy "wheeled running" in your
+            preferred shoe
           </p>
           <p>
-            Privacy and security are core to the Vision Pro, featuring a secure authentication system that respects
-            user privacy and keeps personal data controlled by the user. It has been crafted with an environmental
-            focus, incorporating recycled materials throughout its design.
+            Features like hand-free gesture control for navigation and acceleration put safety first. With no
+            freewheeling or uncontrolled steps, the business claims you can attain speeds up to 2.5 times faster than
+            walking.
           </p>
           <p>
-            For those looking for an innovative device that marries high technology with user-centric design and
-            sustainability, the Apple Vision Pro sets a new benchmark in personal computing devices.
+            The moonwalkers offer an almost magical sensation of swiftly and easily gliding, beyond their physical
+            prowess. Combining the advantages of walking and running into one cutting-edge mobility experience, they
+            provide an enjoyable and invigorating means of transportation.
           </p>
           <p>
             For more detailed information and technical specifications, you can visit the official
-            <a id="vision-pro-website" href="https://www.apple.com/apple-vision-pro/">Apple website</a>.
+            <a href="https://www.apple.com/apple-vision-pro/">Moonwalkers shoes website</a>.
           </p>
         </div>
 
