entertaiment 500px done

--- a/entertaiment.html
+++ b/entertaiment.html
@@ -75,7 +75,7 @@
           </p>
           <p>
             For more detailed information and technical specifications, you can visit the official
-            <a id="vision-pro-website" href="https://www.apple.com/apple-vision-pro/">Apple website</a>.
+            <a class="link" href="https://www.apple.com/apple-vision-pro/">Apple website</a>.
           </p>
         </div>
 
@@ -169,23 +169,13 @@
           </p>
           <p>
             For more detailed information and technical specifications, you can visit the official
-            <a href="https://www.apple.com/apple-vision-pro/">Moonwalkers shoes website</a>.
+            <a class="link" href="https://shiftrobotics.io/">Moonwalkers shoes website</a>.
           </p>
         </div>
 
       </section>
 
     </div>
-
-
-
-
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
 
     </div>
 
