1000px grid added

--- a/entertainment.html
+++ b/entertainment.html
@@ -21,7 +21,7 @@
     <nav id="menu">
       <a href="index.html">Computer</a>
       <a href="mobile.html">Mobile</a>
-      <a href="entertaiment.html" class="active">Entertaiment</a>
+      <a href="entertainment.html" class="active">Entertainment</a>
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
@@ -33,10 +33,12 @@
     <div class="content">
 
       <section id="apple-vision-pro">
-        <h2>Apple vision pro</h2>
-        <p>
-          A product that will make you feel that enything is possible.
-        </p>
+        <section class="entertainment-subtitle">
+          <h2>Apple vision pro</h2>
+          <p>
+            A product that will make you feel that enything is possible.
+          </p>
+        </section>
         <div class="slideshow-container">
           <div class="mySlides">
             <img id="apple-product" src="images/apple-vision-pro.jpg">
@@ -82,7 +84,9 @@
       </section>
 
       <section id="AI">
-        <h2>Artificial Intelligence (AI) and Machine Learning</h2>
+        <section class="entertainment-subtitle">
+          <h2>Artificial Intelligence (AI) and Machine Learning</h2>
+        </section>
         <img src="images/AI-and-machine-learning.jpg">
 
         <div id="AI-content">
@@ -125,11 +129,13 @@
       </section>
 
       <section id="moonwalkers">
-        <h2>Moonwalkers shoes</h2>
-        <p>
-          Moonwalkers™ are the first-ever mobility device that allows you to walk at the speed of a run. Designed
-          with an adaptive A.I. drivetrain, you can cover more distance - at your own pace.
-        </p>
+        <section class="entertainment-subtitle">
+          <h2>Moonwalkers shoes</h2>
+          <p>
+            Moonwalkers™ are the first-ever mobility device that allows you to walk at the speed of a run. Designed
+            with an adaptive A.I. drivetrain, you can cover more distance - at your own pace.
+          </p>
+        </section>
         <div class="slideshow-container">
           <div class="mySlides">
             <img src="images/moonwalkers-shoes-gif.gif">
