--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav id="menu">
       <a href="index.html" class="active">Computer</a>
       <a href="mobile.html">Mobile</a>
-      <a href="entertaiment.html">Entertaiment</a>
+      <a href="entertainment.html">Entertainment</a>
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
@@ -38,8 +38,8 @@
         <img class="" src="images/rtx-4090-1.JPEG" alt="geforce-4070-super videoCard image">
       </div>
 
-      <div class="videoCard-specifications">
-        <p class="specifications">Specifications</p>
+      <section class="videoCard-specifications">
+        <h2 class="specifications">Specifications</h2>
         <p><b>Shaders:</b> 16,432</p>
         <p><b>Boost clock:</b> 2,520MHz</p>
         <p><b>TFLOPs:</b> 82.6</p>
@@ -48,7 +48,7 @@
         <p><b>Memory bandwidth:</b> 1,008GB/s</p>
         <p><b>TGP:</b> 450W</p>
         <p class="price"><b>Price: 1900£</b></p>
-      </div>
+      </section>
 
     </div>
 
