--- a/mobile.html
+++ b/mobile.html
@@ -21,7 +21,7 @@
     <nav id="menu">
       <a href="index.html">Computer</a>
       <a href="mobile.html" class="active">Mobile</a>
-      <a href="entertaiment.html">Entertaiment</a>
+      <a href="entertainment.html">Entertainment</a>
       <a href="about-us.html">About Us</a>
     </nav>
   </header>
